src/objects/Vulnerability__c.object
<CustomObject>
    <fields>
        <fullName>Asset_UUID__c</fullName>
        <label>Asset UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVE__c</fullName>
        <label>CVE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVSS3TemporalScore__c</fullName>
        <label>CVSS3 Temporal Score</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVSS3TemporalVector__c</fullName>
        <label>CVSS3 Temporal Vector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVSS3Vector__c</fullName>
        <label>CVSS3 Vector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVSS3_Base_Score__c</fullName>
        <label>CVSS3 Base Score</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVSSBaseScore__c</fullName>
        <label>CVSS Base Score</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVSSTemporalScore__c</fullName>
        <label>CVSS Temporal Score</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVSSTemporalVector__c</fullName>
        <label>CVSS Temporal Vector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVSSVector__c</fullName>
        <label>CVSS Vector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVSS__c</fullName>
        <label>CVSS</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HostEnd__c</fullName>
        <label>Host End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HostStart__c</fullName>
        <label>HostStart</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ホスト情報</label>
        <referenceTo>Host__c</referenceTo>
        <relationshipLabel>Vulnerability</relationshipLabel>
        <relationshipName>vulnerabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <externalId>true</externalId>
        <label>取込ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PluginFamily__c</fullName>
        <label>Plugin Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PluginId__c</fullName>
        <label>Plugin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PluginOutput__c</fullName>
        <label>Plugin Output</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <label>Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeeAlso__c</fullName>
        <label>See Also</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenablePluginName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VulnerabilityState__c</fullName>
        <label>Vulnerability State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vulnerability</label>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>